crates/runtime/tests/search/snapshots/integration_models__search__arrow-no_vector_engine-view_union_all_join-basic_megascience_vector_search_sql_filters_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, trunc(score, 3) as score FROM vector_search(qs, 'secondary', answer) where subject!='math' order by score desc, id LIMIT 4"
---
Could not prepare EXPLAIN plan. SQL error: [{"id":1015,"answer":"Pedunculagin and alchemillin have astringent and wound-healing properties, possibly due to their high tannin content.","score":0.641},{"id":821,"answer":"Dermatomycosis is caused by fungal infections, specifically various forms of *tinea*, such as athlete's foot (*tinea pedis*).","score":0.622},{"id":449,"answer":"More than 10 years of follow-up is required, as late recurrences (beyond 12 years) have been reported in 5%–10% of patients.","score":0.62},{"id":1193,"answer":"The body profile of Menidae is very deep and resembles a flat disc, due to the strongly curved ventral contour.","score":0.602}]
