crates/runtime/tests/search/snapshots/integration_models__search__arrow-no_vector_engine-view_union_all_join-basic_megascience_vector_search_sql_index_only_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(score, 3) as score  FROM vector_search(qs, 'second', answer) order by score desc, id desc LIMIT 4;"
---
Could not prepare EXPLAIN plan. SQL error: [{"id":468,"score":0.77},{"id":1277,"score":0.769},{"id":189,"score":0.769},{"id":948,"score":0.765}]
