crates/runtime/tests/search/snapshots/integration_models__search__arrow-no_vector_engine-view_union_all_join-basic_megascience_vector_search_sql_random_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT subject FROM vector_search(qs, 'second', answer) order by score desc LIMIT 4"
---
Could not prepare EXPLAIN plan. SQL error: [{"subject":"math"},{"subject":"math"},{"subject":"math"},{"subject":"math"}]
